--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "financial-control",
   "version": "1.0.0",
-  "description": "",
+  "description": "```bash\r npm init\r ```",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
@@ -11,7 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.10.7",
+    "mongoose": "^5.10.8",
     "nodemon": "^2.0.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lucasmatheusmovin/unifeso-financial-control.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lucasmatheusmovin/unifeso-financial-control/issues"
+  },
+  "homepage": "https://github.com/lucasmatheusmovin/unifeso-financial-control#readme"
 }
